--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ index.html
     <label>Total classes present:</label>
     <input type="number" id="present" placeholder="e.g. 45">
     
-    <label>Total classes happened:</label>
+    <label>Total classes:</label>
     <input type="number" id="total" placeholder="e.g. 60">
     
     <label>Attendance percentage you want:</label>
@@ -86,4 +86,5 @@ index.html
 </script>
 
 </body>
+
 </html>
